# rulebook-arbiter

./: AGENTS.md  README.en.md  docker-compose.yml
backend/app/: config.py  main.py
backend/app/errors/: handlers.py
backend/app/models/: presets.py
backend/app/routers/: sources.py  upload.py
backend/app/services/: llm_service.py  pdf_service.py  retrieval_service.py  (+1 more)
backend/tests/: test_api_health.py  test_api_sessions.py  test_api_settings.py  test_api_sources.py  test_llm_service.py  test_presets.py  test_session_service.py  test_vector_service.py
docs/: demo-scenario.md  user-scenarios.md
frontend/: index.html  package.json
frontend/e2e/: demo-recording.spec.ts  upload.spec.ts
frontend/src/: App.tsx
minesweeper/: app.js  index.html  styles.css
rulebook-arbiter/: .env.example  .gitignore  README.md
rulebook-arbiter/backend/: Dockerfile  pyproject.toml
rulebook-arbiter/backend/app/: config.py  main.py
rulebook-arbiter/backend/app/errors/: handlers.py
rulebook-arbiter/backend/app/models/: domain.py  schemas.py
rulebook-arbiter/backend/app/routers/: chat.py  sessions.py  settings.py  sources.py  upload.py
rulebook-arbiter/backend/app/services/: chunking_service.py  llm_service.py  retrieval_service.py  session_service.py
rulebook-arbiter/backend/tests/: conftest.py  test_api_chat.py  test_api_settings.py  test_api_upload.py  test_chunking_service.py  test_pdf_service.py  test_session_conversation.py  test_session_service.py
rulebook-arbiter/frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json
(+51 files in other folders)
